# cartunes

./: .gitattributes  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: mean_bean_ci.yml  mean_bean_deploy.yml
assets/: cartunes.exe.manifest  cartunes.rc  icon.xcf
ci/: build.bash
fixtures/: 2021S2_ARA_LMP2_LeMans_V1.htm  VRS_21S2_ESS_P217_LeMans_R-safe.htm  baseline.htm  iracing_lemans_default.htm  iracing_w12_baseline_glenboot.htm  mx5_charlotte_legends_oval.htm  skip_barber_centripetal.htm
src/: config.rs  default.toml  ellipsis.rs  framework.rs  gpu.rs  gui.rs  main.rs  setup.rs  str_ext.rs  timer.rs  updates.rs
src/gui/: grid.rs
src/setup/: tests.rs
src/updates/: persist.rs
