[package]
name = "cartunes"
version = "0.1.2"
description = "Simple comparison app for iRacing car setups."
authors = ["Jay Oster <jay@kodewerx.org>"]
homepage = "https://github.com/parasyte/cartunes"
repository = "https://github.com/parasyte/cartunes"
edition = "2018"
readme = "README.md"
license = "MIT"
resolver = "2"

[features]
default = ["optimize"]
optimize = ["log/release_max_level_warn"]

[dependencies]
copypasta = "0.7"
directories = "3.0"
egui = { version = "0.14", default-features = false, features = ["single_threaded"] }
egui_wgpu_backend = "0.12"
egui_winit_platform = { version = "0.10", default-features = false, features = ["clipboard", "webbrowser"] }
encoding_rs = "0.8"
env_logger = { version = "0.9", default-features = false, features = ["atty", "humantime", "termcolor"] }
epaint = { version = "0.14", default-features = false, features = ["single_threaded"] }
font-loader = "0.11"
kuchiki = "0.8"
log = "0.4"
ordered-multimap = "0.4"
patricia_tree = "0.3"
pollster = "0.2"
raw-window-handle = "0.3"
rfd = "0.4"
thiserror = "1.0"
toml_edit = "0.2"
unicode-segmentation = "1.7"
walkdir = "2.3"
webbrowser = "0.5"
wgpu = "0.10"
winit = "0.25"
winit_input_helper = "0.10"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
