[package]
name = "cartunes"
version = "0.2.0"
description = "Simple comparison app for iRacing car setups."
authors = ["Jay Oster <jay@kodewerx.org>"]
homepage = "https://github.com/parasyte/cartunes"
repository = "https://github.com/parasyte/cartunes"
edition = "2021"
readme = "README.md"
license = "MIT"

[features]
default = ["optimize"]
optimize = ["log/release_max_level_warn"]

[dependencies]
copypasta = "0.7"
directories = "4.0"
egui = { version = "0.15", default-features = false, features = ["single_threaded"] }
egui_wgpu_backend = "0.14"
egui-winit = "0.15"
encoding_rs = "0.8"
env_logger = { version = "0.9", default-features = false, features = ["atty", "humantime", "termcolor"] }
epaint = { version = "0.15", default-features = false, features = ["single_threaded"] }
font-loader = "0.11"
human-sort = "0.2"
hotwatch = "0.4"
kuchiki = "0.8"
log = "0.4"
ordered-multimap = "0.4"
patricia_tree = "0.3"
pollster = "0.2"
raw-window-handle = "0.3"
rfd = "0.5"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml_edit = "0.12"
unicode-segmentation = "1.7"
ureq = { version = "2.3", features = ["json"] }
walkdir = "2.3"
webbrowser = "0.5"
wgpu = "0.11"
winit = "0.25"
winit_input_helper = "0.10"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6"

[dev-dependencies]
tempfile = "3.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
